--- a/styles/ResumeSection.module.css
+++ b/styles/ResumeSection.module.css
@@ -1,5 +1,5 @@
 .section {
-    padding: 4rem 10%;
+    padding: 4rem 0;
     background-color: #000;
     color: #fff;
     width: 100%;
